# stofzuigerrobot

./: .gitignore  MANUAL.md  README.md  _config.yml  bestuurder.py  build.gradle
app/: build.gradle
app/src/androidTest/java/com/macroyau/blue2serial/demo/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/macroyau/blue2serial/demo/: BluetoothSerialActivityBase.java  BluetoothSerialActivityBase.kt  HomeActivity.java  HomeActivity.kt  StofzuigerrobotApplication.java  StofzuigerrobotApplication.kt  TerminalActivity.java  TerminalActivity.kt
app/src/main/java/com/macroyau/blue2serial/demo/ext/: Context.kt
app/src/main/res/layout/: activity_home.xml  activity_terminal.xml
app/src/main/res/menu/: menu_bluetooth.xml  menu_home.xml
app/src/main/res/values/: strings.xml
arduino/: robot_ai.ino
gradle/wrapper/: gradle-wrapper.properties
simulatie/: .gitignore  Cargo.toml
simulatie/src/: main.rs  module.rs  robot.rs  tests.rs  util.rs
