[package]
name    = "simulatie3"
version = "0.1.0"
authors = [ "" ]

[dependencies]
alga     = "0.5"
nalgebra = "0.13"
num-complex = "0.1"
ncollide = "0.13"
assert_approx_eq = "1.0.0"
lazy_static = "0.2.11"
rand = "0.3"
derive-new = "0.5"
itertools = "*"

[dependencies.nphysics_testbed2d]
path = "./nphysics/examples2d/nphysics_testbed2d"

[dependencies.nphysics2d]
path = "./nphysics/build/nphysics2d"

[dependencies.parallelism]
path = "/home/alfonso/Projects/Rust/parallelism"